--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   ],
   "require": {
     "php": ">=8.3",
-    "six-shop/core": "^v0.4"
+    "six-shop/core": ">=0.4 <1.0"
   },
   "authors": [
     {
